# MidnightRanger

./: .gitignore  CMakeLists.txt  main.cpp
.zed/: tasks.json
Content/Shaders/: Sprite.frag.hlsl  Sprite.vert.hlsl  simple.frag.hlsl  simple.vert.hlsl
cmake/: fetch_glm.cmake  fetch_sdl.cmake  fetch_sdl_image.cmake  fetch_sdl_shadercross.cmake
include/: camera.h  draw.h  pipelines.h  rendering.h  transform.h
src/: camera.cpp  draw.cpp  main.cpp  pipelines.cpp  rendering.cpp
